# PhyloCSFpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Makefile  README.rst  automatic_tests.cpp  azure-pipelines.yml  chr22.head.orig.results  chr22.head.orig.results.formatted  commonNames_assemblies.txt  parallel_file_reader.cpp  phylo_memtest.cpp  phylocsfpp.cpp  prototype.cpp  run.hpp  runPhyloCSFtest.sh  test.cpp
example/: chr22.516alignments.maf  chr22.516alignments.maf.PhyloCSF.fixed.scores  chr22.516alignments.maf.PhyloCSF.mle.scores  chr22.516alignments.maf.PhyloCSF.omega.scores  galGal6_chr22_25_28_subset_ensGene.gtf  galGal6_chr22_25_28_subset_ncbiRefSeq.gtf  galGal6_chr22_25_28_subset_refGene.gtf
example/medium/: chr22.516alignments.maf.fixed.scores  chr22.516alignments.maf.mle.scores  chr22.516alignments.maf.omega.scores
example/medium/PhyloCSF-results/: chr22.516alignments.PhyloCSF.fixed.scores  chr22.516alignments.PhyloCSF.mle.scores  chr22.516alignments.PhyloCSF.omega.scores
example/small/: chr22.50alignments.maf.PhyloCSF.fixed.scores  chr22.50alignments.maf.PhyloCSF.omega.scores
example/small/PhyloCSF-results/: chr22.50alignments.PhyloCSF.mle.scores
example/small/PhyloCSFpp-results/: chr22.50alignments.fixed.scores  chr22.50alignments.mle.scores  chr22.50alignments.omega.scores
example/tracks/: PhyloCSF+1.bw  PhyloCSF+2.bw  PhyloCSF+3.bw  PhyloCSF-1.bw  PhyloCSF-2.bw  PhyloCSF-3.bw  PhyloCSFpower.bw
src/: additional_scores.hpp  alignment_reader.hpp  arg_parse.hpp  bitvector.hpp  cmp_wig.cpp  common.hpp  create_tracks.hpp  ecm.hpp  estimate_hmm_parameter.hpp  expr.hpp  fit.hpp  fixed_lik.hpp  gff_reader.hpp  instance.hpp  maf_parser.hpp  models.hpp  newick.hpp  omega.hpp  parallel_file_reader.hpp  phylocsf++.cpp  phylocsf++annotate.hpp  phylocsf++annotate_with_mmseqs.hpp  phylocsf++annotate_with_msa.hpp  phylocsf++annotate_with_tracks.hpp  phylocsf++build_tracks.hpp  phylocsf++find_cds.hpp  phylocsf++region.hpp  phylocsf++score_msa.hpp  phylocsf++tracks.hpp  run.hpp  smalltest.cpp  translation.h  translation.hpp  wig_file_reader.hpp
test/: automatic_tests.cpp  newick.cpp  runPhyloCSF.sh  tests.sh
test/expected_results/: PhyloCSF+1.wig  PhyloCSF+2.wig  PhyloCSF+3.wig  PhyloCSF-1.wig  PhyloCSF-2.wig  PhyloCSF-3.wig  PhyloCSFRaw+1.wig  PhyloCSFRaw+2.wig  PhyloCSFRaw+3.wig  PhyloCSFRaw-1.wig  PhyloCSFRaw-2.wig  PhyloCSFRaw-3.wig  PhyloCSFpower.wig
test/expected_results/annotate-with-tracks/: galGal6_chr22_25_28_subset_ensGene.PhyloCSF++.gtf  galGal6_chr22_25_28_subset_ncbiRefSeq.PhyloCSF++.gtf  galGal6_chr22_25_28_subset_refGene.PhyloCSF++.gtf
test/expected_results/build-tracks/: PhyloCSF+1.bed  PhyloCSF+1.wig  PhyloCSF+2.bed  PhyloCSF+2.wig  PhyloCSF+3.bed  PhyloCSF+3.wig  PhyloCSF-1.bed  PhyloCSF-1.wig  PhyloCSF-2.bed  PhyloCSF-2.wig  PhyloCSF-3.bed  PhyloCSF-3.wig  PhyloCSFRaw-1.wig  PhyloCSFRaw-2.wig  PhyloCSFRaw-3.wig  PhyloCSFpower.wig
test/maf-file-medium/: chr22.516alignments.maf.omega.scores
test/maf-file-small/: chr22.50alignments.maf
test/maf-file-small/PhyloCSFpp-results/: chr22.50alignments.fixed.scores
util/: liftOverFile.sh
